--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="hero">
             <div>
-                <h2>Bienvenidos a MercadoLibro</h2>
+                <h2 class="animate_animated animate__backInLeft">Bienvenidos a MercadoLibro</h2>
             </div>
         </section>
         <section class="productos">
