--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/logoMercadoLibro.png">
     <title>MercadoLibro</title>
@@ -29,7 +30,7 @@
     <main>
         <section class="hero">
             <div>
-                <h2 class="animate_animated animate__backInLeft">Bienvenidos a MercadoLibro</h2>
+                <h2>Bienvenidos a MercadoLibro</h2>
             </div>
         </section>
         <section class="productos">
@@ -60,6 +61,34 @@
         <!-- <div class="verMas">
             <a href="./page/productos.html"><p>Ver más..</p></a>
         </div> -->
+
+        <section>
+            <h2 class="ofertas" >Ofertas</h2>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://http2.mlstatic.com/D_NQ_857711-MLA51954042645_102022-OO.webp" class="d-block w-100" class = "tamImage" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://http2.mlstatic.com/D_NQ_648795-MLA51986275103_102022-OO.webp" class="d-block w-100" class = "tamImage" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://http2.mlstatic.com/storage/splinter-admin/o:f_webp,q_auto:best/1666034973817-home-sliderdesktopportsaid.jpg" class="d-block w-100" class = "tamImage" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
         <section class="grid-galeria">
             <div class="grid-item biblioteca1">
                 <img src="./img/biblioteca1.jpg" alt="biblioteca">
@@ -87,7 +116,7 @@
             <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="facebook"></img></a>
             <a href="https://www.instagram.com/"><img src="./img/ig.png" alt="instagram"></img></a>
         </div>
-        <div class="info" >
+        <div class="info">
             <ul>
                 <li><a href="">Terminos y condiciones</a></li>
                 <li><a href="./page/nosotros.html">Nosotros</a></li>
@@ -95,11 +124,13 @@
         </div>
         <div class="map">
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13130.71297967629!2d-58.37045016232842!3d-34.63757043254861!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334b6925e5473%3A0x1ca5b2748858b40d!2sEstadio%20Alberto%20J.%20Armando!5e0!3m2!1ses-419!2sar!4v1664237982558!5m2!1ses-419!2sar"
-            width="300" height="170" style="bsorder:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13130.71297967629!2d-58.37045016232842!3d-34.63757043254861!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334b6925e5473%3A0x1ca5b2748858b40d!2sEstadio%20Alberto%20J.%20Armando!5e0!3m2!1ses-419!2sar!4v1664237982558!5m2!1ses-419!2sar"
+                width="300" height="170" style="bsorder:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
+
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 
 </html>
