--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="shortcut icon" href="./img/logoMercadoLibro.png">
     <title>MercadoLibro</title>
 </head>
@@ -58,12 +59,8 @@
                 </div>
             </div>
         </section>
-        <!-- <div class="verMas">
-            <a href="./page/productos.html"><p>Ver más..</p></a>
-        </div> -->
-
-        <section>
-            <h2 class="ofertas" >Ofertas</h2>
+        <section class="ofertas">
+            <h2>Ofertas</h2>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
