--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Los mejores libros a los mejores precios">
+    <meta name="keywords" content="Libro, Paginas, Resumen, Sinopsis, Libreria, Biblioteca, Novela, Obra"
+    <meta property="og:type" content="Web site">
+    <meta property="og:type" content="MercadoLibro | Los mejores libros">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="shortcut icon" href="./img/logoMercadoLibro.png">
     <title>MercadoLibro</title>
@@ -38,22 +41,22 @@
             <h2>Productos</h2>
             <div class="tarjetas">
                 <div class="card">
-                    <img src="./img/habitosAtomicos.jpg" alt="" class="card__imagen">
+                    <img src="./img/habitosAtomicos.jpg" alt="habitosAtomicos" class="card__imagen">
                     <h3 class="card__texto">Habitos Atomicos</h3>
                     <a href="">Comprar</a>
                 </div>
                 <div class="card">
-                    <img src="./img/elClubDeLas5.jpg" alt="" class="card__imagen">
+                    <img src="./img/elClubDeLas5.jpg" alt="elClubDeLas5" class="card__imagen">
                     <h3 class="card__texto">El club de las 5 de la mañana</h3>
                     <a href="">Comprar</a>
                 </div>
                 <div class="card">
-                    <img src="./img/padreRicoPadrePobre.jpg" alt="" class="card__imagen">
+                    <img src="./img/padreRicoPadrePobre.jpg" alt="padreRicoPadrePobre" class="card__imagen">
                     <h3 class="card__texto">Padre Rico Padre Pobre</h3>
                     <a href="">Comprar</a>
                 </div>
                 <div class="card">
-                    <img src="./img/despertandoAlGiganteInterior.png" alt="" class="card__imagen">
+                    <img src="./img/despertandoAlGiganteInterior.png" alt="despertandoAlGiganteInterior" class="card__imagen">
                     <h3 class="card__texto">Despertando al gigante</h3>
                     <a href="">Comprar</a>
                 </div>
@@ -64,13 +67,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://http2.mlstatic.com/D_NQ_857711-MLA51954042645_102022-OO.webp" class="d-block w-100" class = "tamImage" alt="...">
+                        <img src="./img/carousel_oferta1.jpg" class="d-block w-100" class = "tamImage" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://http2.mlstatic.com/D_NQ_648795-MLA51986275103_102022-OO.webp" class="d-block w-100" class = "tamImage" alt="...">
+                        <img src="./img/carousel_oferta2.jpg" class="d-block w-100" class = "tamImage" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://http2.mlstatic.com/storage/splinter-admin/o:f_webp,q_auto:best/1666034973817-home-sliderdesktopportsaid.jpg" class="d-block w-100" class = "tamImage" alt="...">
+                        <img src="./img/carousel_oferta3.jpg" class="d-block w-100" class = "tamImage" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -85,7 +88,6 @@
                 </button>
             </div>
         </section>
-
         <section class="grid-galeria">
             <div class="grid-item biblioteca1">
                 <img src="./img/biblioteca1.jpg" alt="biblioteca">
